--- a/src/pages/CreatePoint/styles.css
+++ b/src/pages/CreatePoint/styles.css
@@ -22,6 +22,18 @@
   align-items: center;
 }
 
+#page-create-point header div {
+  display: flex;
+  align-items: center;
+}
+
+#page-create-point header div span {
+  color: #322153;
+  font-family: Ubuntu;
+  font-size: 32px;
+  margin-left: 16px;
+}
+
 #page-create-point header a svg {
   margin-right: 16px;
   color: var(--primary-color);
